--- a/_data/author.yml
+++ b/_data/author.yml
@@ -1,4 +1,4 @@
 #-------------------------------
 # Author Settings
-author_name: Vanessa Marley
+author_name: Niklas Fännick
 author_image: '/images/avatar.jpg'
