--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -12,4 +12,4 @@ footer_menu__settings:
       url: '/blog/'
 
 copyright_text_html: >-
-  <p> 2025 &copy; <a href="/">Vonge</a>. Template by <a href="https://cloudcannon.com/">CloudCannon</a>.</p>
+  <p> 2025 &copy; <a href="/">Niklas Fännick</a>.</p>
