Modified by www.SourceFiles.app

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -2,13 +2,11 @@ footer_menu__settings:
   menu__items:
     - title: 'Home'
       url: '/'
-    - title: 'Projects'
-      url: '/projects/'
-    - title: 'Elements'
-      url: '/elements/'
-    - title: 'About'
-      url: '/about/'
-    - title: 'Blog'
+    - title: 'Kurser'
+      url: '/kurser/'
+    - title: 'Om oss'
+      url: '/om/'
+    - title: 'Blågg'
       url: '/blog/'
 
 copyright_text_html: >-
