Modified by www.SourceFiles.app

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,8 +5,8 @@ menu__settings:
     - title: 'Hem'
       url: '/'
     - title: 'Kurser'
-      url: '/projects/'
+      url: '/kurser/'
     - title: 'Blågg'
       url: '/blog/'
     - title: 'Om oss'
-    - url: '/about/'
+    - url: '/om/'
